<resources>
    <string name="app_name">Coronavirus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coronavirus_description_header">What is coronavirus?</string>
    <string name="coronavirus_description">Coronaviruses are a large family of viruses which may cause illness in animals or humans.
        In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases
        such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).
        The most recently discovered coronavirus causes coronavirus disease COVID-19.</string>
    <string name="coronavirus_symptoms_header">What are the symptoms of COVID-19?</string>
    <string name="coronavirus_symptoms">The most common symptoms of COVID-19 are fever, tiredness, and dry cough.
        Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea.
        These symptoms are usually mild and begin gradually. Some people become infected but don’t develop
        any symptoms and don\'t feel unwell. Most people (about 80%) recover from the disease without needing special treatment.
        Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people,
        and those with underlying medical problems like high blood pressure, heart problems or diabetes, are more likely to develop serious illness.
        People with fever, cough and difficulty breathing should seek medical attention.</string>
    <string name="coronavirus_prevention_header">What can I do to protect myself and prevent the spread of disease?</string>
    <string name="coronavirus_prevention">Stay aware of the latest information on the COVID-19 outbreak, available on the WHO website and through your national and
        local public health authority. Many countries around the world have seen cases of COVID-19 and several have seen outbreaks. Authorities in China
        and some other countries have succeeded in slowing or stopping their outbreaks. However, the situation is unpredictable so check regularly for the latest news.</string>
    <string name="coronavirus_prevention_hands_header">Clean Your Hands</string>
    <string name="coronavirus_prevention_hands">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.
        Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.</string>
    <string name="coronavirus_prevention_distance_header">Keep The Distance</string>
    <string name="coronavirus_prevention_distance">Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or sneezing.
        Why? When someone coughs or sneezes they spray small liquid droplets from their nose or mouth which may contain virus.
        If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person coughing has the disease.</string>
    <string name="coronavirus_prevention_touch_header">Avoid Touch</string>
    <string name="coronavirus_prevention_touch">Avoid touching eyes, nose and mouth.
        Why? Hands touch many surfaces and can pick up viruses. Once contaminated,
        hands can transfer the virus to your eyes, nose or mouth. From there,
        the virus can enter your body and can make you sick.</string>
    <string name="coronavirus_source">Above information comes from https://www.who.int/ . In any case, if you have fever, cough and difficulty breathing seek medical care early to reduce
        the risk of developing a more severe infection and be sure to share your recent travel history with your health care provider. </string>
</resources>
