<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.InfoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_idea"
            app:headerText="@string/coronavirus_description_header"
            app:contentText="@string/coronavirus_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_virus"
            app:headerText="@string/coronavirus_symptoms_header"
            app:contentText="@string/coronavirus_symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_safety"
            app:headerText="@string/coronavirus_prevention_header"
            app:contentText="@string/coronavirus_prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_hand_wash"
            app:headerText="@string/coronavirus_prevention_hands_header"
            app:contentText="@string/coronavirus_prevention_hands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_road"
            app:headerText="@string/coronavirus_prevention_distance_header"
            app:contentText="@string/coronavirus_prevention_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.coronavirus.views.InfoSectionView
            app:imageHeader="@drawable/ic_touch"
            app:headerText="@string/coronavirus_prevention_touch_header"
            app:contentText="@string/coronavirus_prevention_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BriefDescriptionTextStyle"
            android:text="@string/coronavirus_source" />

    </LinearLayout>

</ScrollView>